Fix: Add ESLint config and fix MDX parsing error for Vercel deployment

--- a/docs/pages/guides/seo-metadata.mdx
+++ b/docs/pages/guides/seo-metadata.mdx
@@ -397,13 +397,13 @@ Every page should have unique:
 - Minimum: 600x315px
 - Aspect ratio: 1.91:1
 - Format: JPG, PNG
-- Max size: <5MB
+- Max size: under 5MB
 
 **Twitter Card**:
 - Recommended: 1200x675px (16:9)
 - Minimum: 300x157px
 - Format: JPG, PNG, WebP, GIF
-- Max size: <5MB
+- Max size: under 5MB
 
 ### 4. Robots Meta
 
