cleaning and added benchmarking tutorial.

--- a/docs/pages/tutorials/benchmarking-quickstart.mdx
+++ b/docs/pages/tutorials/benchmarking-quickstart.mdx
@@ -1,5 +1,7 @@
 # Performance Benchmarking - Quick Start
 
+Get up and running with performance benchmarking in minutes.
+
 ## 🚀 First Time Setup
 
 ### Step 1: Install Lighthouse CI
@@ -224,8 +226,7 @@ npm run benchmark:check
 ## 📚 More Information
 
 For detailed documentation, see:
-- [PERFORMANCE_BENCHMARKING.md](./PERFORMANCE_BENCHMARKING.md) - Complete guide
-- [CI_CD.md](./CI_CD.md) - CI/CD integration
+- [Performance Benchmarking Guide](/tutorials/performance-benchmarking) - Complete guide
 - `.github/workflows/performance-benchmark.yml` - GitHub Actions workflow
 
 ---
@@ -254,4 +255,4 @@ Review results:
 
 ---
 
-**🎉 You're all set! The framework will maintain 100/100 Lighthouse scores with automated monitoring.**
+**🎉 You're all set! The framework maintains 100/100 Lighthouse scores with automated monitoring.**
